# json-parser

./: .gitignore  README.md  pyproject.toml  test_parser.py
jsonparser/: __init__.py  jsonparser.py
test_cases/: case_1.json  case_10.json  case_2.json  case_3.json  case_4.json  case_5.json  case_6.json  case_7.json  case_8.json  case_9.json
