[tool.poetry]
name = "json-parser"
version = "0.1.0"
description = ""
authors = ["Adham Ehab <adham.ehab@hey.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest"
